This documents significant changes in the dev branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2025-03-28:

- Fixed crash upon resizing the terminal window after 'stty -echo', including
  when invoking ksh as a child shell in an editor such as emacs (M-x shell).

2025-03-24:

- Fixed a crash that occurred in specific circumstances when processing a
  here-documnet within a command subtitution within another here-document.

2025-03-21:

- Fixed a corner case bug in the "$*" expansion: spurious backslashes were
  inserted for empty parameters if IFS has the empty value (meaning, no
  output field separator). For example:
	(set -- a '' b '' c; IFS=''; echo "$*")
  wrote a\b\c but now again writes abc. Bug introduced on 2022-07-28.

2025-03-20:

- Fixed a corner case bug in ksh's printf built-in: if there was a gap in
  index conversion specifiers (for example, %5$s, the string with index 5,
  given without %4$s, %3%s or %2%s), then ksh incorrectly executed the
  string arguments corresponding to the gap as arithmetic expressions.

2025-01-15:

- [v1.1] The $RANDOM pseudorandom numbers are now generated by nrand48(3)
  instead of rand_r(3). Since POSIX specifies a particular pseudorandom
  generator for nrand48, this means the same pseudorandom sequence should now
  be generated on all platforms if RANDOM is assigned the same seed value.

2025-01-08:

- Fixed buggy emacs mode behaviour on exceeding the maximum line length.

2025-01-07:

- Fixed the expansion ${variable//""/string}; since the shell pattern is
  empty, this should output the value of the variable unchanged, and now
  once again does. Bug introduced on 2023-03-29.

- Fixed multibyte processing in the expansion ${variable//~(E)/string},
  i.e., the pattern is an empty Extended Regular Expression (ERE). This
  now inserts string between each character instead of each byte.

2025-01-05:
